@@ -3,6 +3,12 @@ package com.planet_ink.coffee_mud.Abilities.Properties;
 import com.planet_ink.coffee_mud.core.CMClass;
 import com.planet_ink.coffee_mud.core.CMLib;
 import com.planet_ink.coffee_mud.core.CMParms;
+import com.planet_ink.coffee_mud.core.collections.Converter;
+import com.planet_ink.coffee_mud.core.collections.ConvertingEnumeration;
+import com.planet_ink.coffee_mud.core.collections.IteratorEnumeration;
+import com.planet_ink.coffee_mud.core.collections.Pair;
+import com.planet_ink.coffee_mud.core.collections.PairList;
+import com.planet_ink.coffee_mud.core.collections.PairVector;
 import com.planet_ink.coffee_mud.core.interfaces.*;
 import com.planet_ink.coffee_mud.CharClasses.interfaces.CharClass;
 import com.planet_ink.coffee_mud.Common.interfaces.*;
@@ -30,7 +36,7 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class Prop_ItemSlotFiller extends Property
+public class Prop_ItemSlotFiller extends Property implements AbilityContainer
 {
 	@Override
 	public String ID()
@@ -54,9 +60,28 @@ public class Prop_ItemSlotFiller extends Property
 	protected String		slotType	= "";
 	protected Ability[] 	affects		= new Ability[0];
 	protected Physical		affected2	= null;
-	protected List<String>	skips		= new ArrayList<String>(0);
-	
+	protected List<String>	skips		= new Vector<String>(0);
 	protected static Item 	fakeItem	= null;
+	
+	protected PairList<String, String>	adds		= new PairVector<String, String>(0);
+
+	@Override
+	public String accountForYourself()
+	{
+		if(numAbilities()==0)
+			return "";
+		final StringBuilder str=new StringBuilder("Adds the following effects: ");
+		for(Enumeration<Ability> a=abilities();a.hasMoreElements();)
+		{
+			final Ability A=a.nextElement();
+			if(A!=null)
+				str.append(A.accountForYourself()+", ");
+		}
+		if(str.length()>2)
+			str.delete(str.length()-2,str.length());
+		str.append(".  ");
+		return str.toString();
+	}
 	
 	@Override
 	public void setAffectedOne(Physical P)
@@ -89,17 +114,28 @@ public class Prop_ItemSlotFiller extends Property
 	
 	protected Ability[] getAffects()
 	{
-		if((affects.length==0)&&(this.affecting()!=null)&&(this.affecting().numEffects()>1))
+		if((affects==null)
+		&&(this.affecting()!=null))
 		{
 			final List<Ability> newAffects=new LinkedList<Ability>();
-			for(final Enumeration<Ability> a=this.affecting().effects();a.hasMoreElements();)
+			if(affecting().numEffects()>1)
 			{
-				Ability A=a.nextElement();
-				if((A!=this)&&(!skips.contains(A.ID().toUpperCase())))
+				for(final Enumeration<Ability> a=affecting().effects();a.hasMoreElements();)
 				{
-					A.setAffectedOne(getAffected());
-					newAffects.add(A); // not the copy!
+					Ability A=a.nextElement();
+					if((A!=this)
+					&&(!skips.contains(A.ID().toUpperCase())))
+					{
+						A.setAffectedOne(getAffected());
+						newAffects.add(A); // not the copy!
+					}
 				}
+			}
+			for(final Enumeration<Ability> a=this.abilities();a.hasMoreElements();)
+			{
+				final Ability A=a.nextElement();
+				A.setAffectedOne(getAffected());
+				newAffects.add(A); // not the copy!
 			}
 			affects=newAffects.toArray(new Ability[0]);
 		}
@@ -112,7 +148,65 @@ public class Prop_ItemSlotFiller extends Property
 		slotCount = CMParms.getParmInt(text, "NUM", 1);
 		slotType= CMParms.getParmStr(text, "TYPE", "");
 		skips.clear();
-		skips.addAll(CMParms.parseCommas(CMParms.getParmStr(text(), "SKIPS", "").toUpperCase(), true));
+		skips.addAll(CMParms.parseCommas(CMParms.getParmStr(text, "SKIPS", "").toUpperCase(), true));
+		adds.clear();
+		int addState=0;
+		final String addStr=CMParms.getParmStr(text, "ADDS", "");
+		int lastDex=0;
+		Pair<String,String> p=new Pair<String,String>("","");
+		for(int i=0;i<addStr.length();i++)
+		{
+			final char c=addStr.charAt(i);
+			switch(addState)
+			{
+			case 0:
+				if((c=='(')&&(lastDex!=i))
+				{
+					p.first=addStr.substring(lastDex,i).trim();
+					lastDex=i+1;
+					addState=1;
+				}
+				else
+				if((c==',')&&(lastDex!=i))
+				{
+					p.first=addStr.substring(lastDex,i).trim();
+					lastDex=i+1;
+					if((p.first.length()>0)&&(CMClass.getAbilityPrototype(p.first)!=null))
+					{
+						adds.add(p);
+						p=new Pair<String,String>("","");
+					}
+				}
+				break;
+			case 1:
+				if(c==')')
+				{
+					if(lastDex!=i)
+						p.second=addStr.substring(lastDex,i);
+					addState=2;
+				}
+				break;
+			case 2:
+				if(c==',')
+				{
+					if((p.first.length()>0)&&(CMClass.getAbilityPrototype(p.first)!=null))
+					{
+						adds.add(p);
+						p=new Pair<String,String>("","");
+					}
+					lastDex=i+1;
+					addState=0;
+				}
+				break;
+			}
+		}
+		if((p.first.length()>0)&&(CMClass.getAbilityPrototype(p.first)!=null))
+		{
+			adds.add(p);
+			if(addState == 1)
+				p.second=addStr.substring(lastDex);
+		}
+		affects=null;
 		super.setMiscText(text);
 	}
 	
@@ -182,5 +276,96 @@ public class Prop_ItemSlotFiller extends Property
 			}
 		}
 		super.affectCharState(affectedMOB,affectedState);
+	}
+
+	@Override
+	public void addAbility(Ability to)
+	{
+		throw new java.lang.UnsupportedOperationException();
+	}
+
+	@Override
+	public void delAbility(Ability to)
+	{
+		throw new java.lang.UnsupportedOperationException();
+	}
+
+	@Override
+	public int numAbilities()
+	{
+		return adds.size();
+	}
+
+	@Override
+	public Ability fetchAbility(int index)
+	{
+		if((index<0)||(index>=adds.size()))
+			return null;
+		final Ability A=CMClass.getAbility(adds.getFirst(index));
+		if(A!=null)
+			A.setMiscText(adds.getSecond(index));
+		return A;
+	}
+
+	@Override
+	public Ability fetchAbility(String ID)
+	{
+		for(int i=0;i<adds.size();i++)
+		{
+			if(adds.getFirst(i).equalsIgnoreCase(ID))
+			{
+				final Ability A=CMClass.getAbility(adds.getFirst(i));
+				if(A!=null)
+					A.setMiscText(adds.getSecond(i));
+				return A;
+			}
+		}
+		return null;
+	}
+
+	@Override
+	public Ability fetchRandomAbility()
+	{
+		if(adds.size()==0)
+			return null;
+		return this.fetchAbility(CMLib.dice().roll(1, adds.size(), -1));
+	}
+
+	@Override
+	public Enumeration<Ability> abilities()
+	{
+		return new ConvertingEnumeration<Pair<String,String>, Ability>(
+				new IteratorEnumeration<Pair<String,String>>(adds.iterator()), 
+				new Converter<Pair<String,String>, Ability>()
+		{
+			@Override
+			public Ability convert(Pair<String, String> obj)
+			{
+				if(obj==null)
+					return null;
+				final Ability A=CMClass.getAbility(obj.first);
+				if(A!=null)
+					A.setMiscText(obj.second);
+				return A;
+			}
+		});
+	}
+
+	@Override
+	public void delAllAbilities()
+	{
+		throw new java.lang.UnsupportedOperationException();
+	}
+
+	@Override
+	public int numAllAbilities()
+	{
+		return adds.size();
+	}
+
+	@Override
+	public Enumeration<Ability> allAbilities()
+	{
+		return abilities();
 	}
 }
