@@ -827,7 +827,8 @@ property sets whether the items in the slots may be removed.  See also Prop_Item
 PROP_ITEMSLOTFILLER=\
 Property   : Prop_ItemSlotFiller\n\r\
 Targets    : ITEM\n\r\
-Parameters : (NUM=[SLOTS COUNT]) (TYPE=[STRING]) (SKIPS=[ID,...])\n\r\
+Parameters : (NUM=[SLOTS COUNT]) (TYPE=[STRING]) (SKIPS=[ID,...]) \n\r\
+Parameters : (ADDS=[ID(args),...])\n\r\
 Example    : NUM=4 TYPE=Gems REMOVEABLE=TRUE\n\r\
 Description: \n\r\
 When placed on an item, that item will put able to be PUT, using the PUT command, into the \
@@ -835,9 +836,13 @@ slots provided on an item with the Prop_ItemSlot property.  When this is done, t
 which this item is PUT will gain all the effect benefits of this item.\n\r\
 \n\r\
 The NUM parameter determines how many slots this item takes up.  The TYPE parameter must match \
-the TYPE parameter from the Prop_ItemSlot of the item being PUT into.  The SKIPS \
-property is a comma delimited list of Ability IDs which should be ignored when determining which \
-effects on this item should be applied to the slotted item.
+the TYPE parameter from the Prop_ItemSlot of the item being PUT into.\n\r\
+\n\r\
+The SKIPS property is a comma delimited list of Ability IDs which should be ignored when determining which \
+effects on this item should be applied to the slotted item.\n\r\
+\n\r\
+The ADDS property is a comma delimited list of Ability IDS should should be added to an item whose slot \
+is filled by this one.  Arguments to the ablilities can be given in parenthesis().
 
 PROP_ITEMTRANSPORTER=\
 Property   : Prop_ItemTransporter\n\r\
